# ChangeLog for app-emulation/virtualbox-modules
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/virtualbox-modules/ChangeLog,v 1.140 2013/12/18 20:52:08 polynomial-c Exp $

*virtualbox-modules-4.3.6 (18 Dec 2013)

  18 Dec 2013; Lars Wendler <polynomial-c@gentoo.org>
  -virtualbox-modules-4.1.26.ebuild, -virtualbox-modules-4.3.2.ebuild,
  +virtualbox-modules-4.3.6.ebuild:
  Version bump. Removed old.

  07 Dec 2013; Pacho Ramos <pacho@gentoo.org> virtualbox-modules-4.2.18.ebuild:
  x86 stable, bug #480044

*virtualbox-modules-4.3.4 (30 Nov 2013)

  30 Nov 2013; Lars Wendler <polynomial-c@gentoo.org>
  -virtualbox-modules-4.3.0.ebuild, +virtualbox-modules-4.3.4.ebuild:
  Version bump. Removed old.

*virtualbox-modules-4.2.20 (29 Nov 2013)

  29 Nov 2013; Lars Wendler <polynomial-c@gentoo.org>
  +virtualbox-modules-4.2.20.ebuild:
  Version bump.

  17 Nov 2013; Pacho Ramos <pacho@gentoo.org> +files/virtualbox.conf,
  virtualbox-modules-4.3.2.ebuild:
  Install a modules-load.d file to load modules automatically on systemd
  (#490988 by Rafal Rzepecki)

*virtualbox-modules-4.3.2 (02 Nov 2013)

  02 Nov 2013; Lars Wendler <polynomial-c@gentoo.org>
  +virtualbox-modules-4.3.2.ebuild:
  Version bump (bug #490070).

  20 Oct 2013; Tony Vroon <chainsaw@gentoo.org>
  virtualbox-modules-4.2.18.ebuild:
  Marked stable on AMD64 based on arch testing by Elijah "Armageddon" El
  Lazkani in bug #480044.

*virtualbox-modules-4.3.0 (15 Oct 2013)

  15 Oct 2013; Lars Wendler <polynomial-c@gentoo.org>
  -virtualbox-modules-4.2.16.ebuild, +virtualbox-modules-4.3.0.ebuild:
  Version bump. Removed old.

  11 Sep 2013; Lars Wendler <polynomial-c@gentoo.org>
  files/create_vbox_modules_tarball.sh:
  Updated tarball creation script to handle _beta and _rc versions properly.

*virtualbox-modules-4.2.18 (08 Sep 2013)

  08 Sep 2013; Lars Wendler <polynomial-c@gentoo.org>