@@ -1,7 +1,6 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-AUX create_vbox_modules_tarball.sh 896 SHA256 4309bbf762e05ae09a2b92a737abddb89807b5a36f587178d7ac7f6ad4d91316 SHA512 c3154a13550817c581fa142e24081edfbdbc145315d34cc4569d12ad87a518fa0bf1443c053b50fdfdea6915bda1325ad973455ee85079294b83a49fd53f4771 WHIRLPOOL 761079d4ba0124488be9cc78305eef6c6df18d232c539ff4479caf3f04ea307e043c92a5f4099c7745a4e23741ce28259e87dd79bce8cee6862ef5e0661b2497
 AUX virtualbox-modules-4.1.4-pax-const.patch 2335 SHA256 d23da93fa1a3b7833766caa8329745ed7de7a5ed6ce1fecb090325fdc83e42f3 SHA512 8f5ffcd53f34e616b895013660e269e6031837411471abf69711df4fd5d745299dcb08d361eda0979dcfde7d9aafa0d24c99fcc9f3875fbf35771945f6b224a1 WHIRLPOOL b875d0747bdf3c2970d9dc84c7e4f6fac1bd37b85ba6086a981397c8b506a7af2709fa94317896650fd9ae98921d40f399e589b851eb2da2f9854eb1f443930c
 AUX virtualbox.conf 30 SHA256 0ab3195ae385753244a45a8b01e35ad5a1c9569fdda01b3fa025137c002e206a SHA512 8261c323ed1abcb5d45044a2cd49b5f62c84b5a7e43339f42a0d3f20e54ce5fef092106d331a3e2758e690803a2a397c2f533d0d1b7c67e05d707e6095564ef8 WHIRLPOOL 1f7e0d363be6a70dc276ca7a96a4d28873af34c5b2b15cabaa2a3fb609def8b20c725e964d2349b4e3cc62c9e2b6794ed6a0f41a3ea444a4434c410ee7d83775
 DIST vbox-kernel-module-src-4.2.18.tar.xz 493892 SHA256 2ff5bb1ba83dc45b15877305be6c36226f861fd0b0056812040237db1ef1158e SHA512 d8d5a188905b4fc94ff293620c1a92723846f88dd86c0aa34990a385280e78463333c777f67e656e5a363a0b981d6000fb6df1dc927da4c8854c3a9e94576979 WHIRLPOOL 946473710a7fa550afceb961967dd619ca224ad4dbb59c738975aaccbeb142dbd50daa6b652fcebe15769516d7edd1eca311b75fa082753b02b31b470c7a86dc
@@ -12,22 +11,16 @@ EBUILD virtualbox-modules-4.2.18.ebuild 1593 SHA256 2a3fa905815ec589743f3d2fb379
 EBUILD virtualbox-modules-4.2.20.ebuild 1602 SHA256 4e898f45bef30f8ca24b22fc9ee709d7aade3a4aa1bcff3c7ba39a47b7c7ad61 SHA512 c6b186ee6cf3aff94a63911be269ca480d2d8f6fc0225cabf24a03978c54063a0a682aa8caaac751d6bf6223febced0c2966b387f0842dde695289adad8cc39e WHIRLPOOL 38125c5e895ec0f94222ee37183e26d39ba47eeb9632c21787d1d7a800ce2765d5eec4484261858e9b671ec53421935393f038fc5c0cd47916eacc8b89721522
 EBUILD virtualbox-modules-4.3.4.ebuild 1579 SHA256 e323d87236d1796038a2b4659ae5d0aa1f81fa19e11ca1d771c17af6361a6c03 SHA512 1d961f150f87d7a0f699a89f315ac45303a72ddd241877b0c88fd8a8994ee13387fd725191fb6d30c305bbc4f35e45fb959cb1a818c12c7966781e6faa7ae92b WHIRLPOOL 3fb663f680ab0ff4a0eaaa5a0fa76dfff4da39c2b5c7dbdfe69bc129a8e02204ef8043cf8e6ea318ef83aaf6bd09754e8f1c39f4dc2e499f6c500ebe8d5a93d8
 EBUILD virtualbox-modules-4.3.6.ebuild 1579 SHA256 b9ddc1795a11b8ee6fd1ec922b9467000c50f87989ffdf8d317a6eeef6d6d968 SHA512 d3a7beb4b9a536dd866315fedd6b5ad7e969d1cd77fa43183582db0634bbb1348929d3fc6cf3d7a81335f587f221c60c5a242932fc813a12f89088fba7c5eb2a WHIRLPOOL 46f39d6addd612dd24d79a64726822cab644c00edb33898fdf82ced9b80dcc6998caa8dcba1fe195f5fea21780fc26fd7601e8e56a14d10f7b7c0c38a31b8a87
-MISC ChangeLog 25362 SHA256 2588db814257b4e8513ae56f2d88221187738db2b9a6a60d01649c523ff4913b SHA512 b50a8b894cd78fab0d97091df9c80a9316126bc0d7f516c2f486171cbef9586555f075091a3ef800d69217ba2b03fe34c6013a489f2f89fede060b7cafbaf7a3 WHIRLPOOL 6ff9484f1d00e936cb89c847c30d46c971b9b6a91ae10f5e3c58385a1b3eba0be14f670fdbd62f99cf7a7c58f67a66435f3a111e66ac8daea58501b557816efd
+MISC ChangeLog 25473 SHA256 bc69d9370f606f799f1e042d182040aa243828330ba4a2a0e5f59cc7742df107 SHA512 cc980bb71ad0e43173817c7538cf3dabccdd42bd129f6015a1a80221576850aed0b205909cca96c535217f60738207a3048b598ee56163a20219234e4fa5a574 WHIRLPOOL 55add362b97b846f21e3743705a50b645772b70e5b027e12e4b47ec6f4ec368759759f364d386255e215aaee4131c144843009111e5662b410f60e4dac6144e7
 MISC metadata.xml 431 SHA256 dd5f585b5465db14257bab08b1e7fe6f9ceca47d631bb8418665dd4ab0819e77 SHA512 6269d132a33ffae160ed2b4b87618ef764b990bfdbdaf026401a0794b48fb2bd0c4203892a4e0e31904b84f967cd4ef5343dcfa6e2bdb9e755894d9906b38df8 WHIRLPOOL 8d8b65880991d6feecd562639e4da520247dae4418cb7869e03ae775be668898dd1a84141a4146f17d8c6e9e0a5d1a0fe5ecc64517b03f19bd2777ccf84f41c5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSsgr5AAoJEPiazRVxLXTFnX4P/231ellWF+mM7JhPwz6JqAn4
-kBqCcVCi1s/3Y82VnaHaMTEs9vR5lyovHz7rKYqYPoCYg5igGYoGRno5fqnUm9al
-zNIEdNEhToTvkCTvVsMGafkWVS4x8RluPLIMZXbXZrAECivwj9B2EEefQ9MSJUhF
-2xL85biuupgp9qBCpDbK/P1QlGtduThfr/I3xE4i1jQmnrZXePZqnebdb0QyJUsu
-pLBMxAchGQqdpDu4V8rtsnyIsCnToDObaqfMcg3oWErOoyXqoyquK2j2tBGNkwhJ
-87nA0t+GaTZvvld3dNMdAC6dxPhBm0gTp2BiXG+GvpPJEBl8KvxUAl6wc5/xDnw1
-hDP7E2ZaYVaxsI3CbyXXC0sMu65002KquYTrcSd1Z0Vc59MHzJlFG8hl2lAcjkRz
-D/P+EayZkkBzLWC/YlqIjP7jjvA8BVMZ1atDa8VRd2dOgO7OSVPWIOFq2xoClFUi
-R/Q0kUwAGp0UCrhGW5kQe1Uc+po8oK2kVJTTRbMP1JFbLZrGZbJJFW9szbstYOq3
-mXnKVhddUWEzpOa+Jmo1xaaySFGjzsdRYnN0q2OPICRAsZVd6lYh8K5vBpcmdkOc
-qkCQNYqMymd4hYhoja2P7eScQXDog6QzN8BJEU0hpXSgnotSmMCt6DJgLQpfzVqq
-fpzqeR8N8qYv+GUQKutk
-=xYfw
+iQEcBAEBCAAGBQJSwv0dAAoJEJWyH81tNOV9N2gIAKcpqlsPq40GRcB6biP5/k33
+pTktissG+OvOS2jmO/gEwK1iQBqNyuSUS07eb6JJ77nlzwtswagLxJtYNfwO9Y1q
+RIO+ZfK5DJn4AQwhDoYzv93YVNfoNsl6b+x2vPWBOSn96xuccz9MYnfBjxIItGrf
+8JIZEKoyfq9HV10bCRQ5oJsa1m26vNUDxyKt0u3ApScSXU14SAT9yURQ7aiL9inX
+2lgA4bAJYYm/SW+kJSMEZV1QSVFzJp6VI5CjOLhl7vXTL2gzqsI59OglTF2jxY1P
+dgkoChzTNQKkOAS+A0ZK3selJ6Yvot5Axs1apMSqjOcldRHKVoPBK0C5VwUpop8=
+=Urji
 -----END PGP SIGNATURE-----
