@@ -1,6 +1,10 @@
 # ChangeLog for app-emulation/virtualbox-modules
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/virtualbox-modules/ChangeLog,v 1.140 2013/12/18 20:52:08 polynomial-c Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/virtualbox-modules/ChangeLog,v 1.141 2013/12/31 17:21:55 tomwij Exp $
+
+  31 Dec 2013; Tom Wijsman <TomWij@gentoo.org>
+  -files/create_vbox_modules_tarball.sh:
+  [QA] Remove unused files.
 
 *virtualbox-modules-4.3.6 (18 Dec 2013)
 
